About Me fixing overflow hight

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,133 +1,135 @@
 .contact {
-    height: 100vh;
-    position: relative;
+  height: 100vh;
+  position: relative;
 }
 
 .c-bg {
-    width: 2rem;
-    height: 100%;
-    background-color: #59b256;
-    position: absolute;
+  width: 2rem;
+  height: 100%;
+  background-color: #59b256;
+  position: absolute;
 }
 
 .c-wrapper {
-    padding: 5rem;
-    display: flex;
+  padding: 5rem;
+  display: flex;
 }
 
 .c-left {
-    flex: 1;
+  flex: 1;
 }
 
 .c-right {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .c-title {
-    font-size: 6rem;
-    width: 80%;
+  font-size: 6rem;
+  width: 80%;
 }
 
 .c-info-item {
-    display: flex;
-    align-items: center;
-    margin: 5rem 0rem;
-    font-weight: 300;
-    width: 70%;
+  display: flex;
+  align-items: center;
+  margin: 5rem 0rem;
+  font-weight: 300;
+  width: 70%;
 }
 
 .c-info-item a {
-    text-decoration: none;
-    color: currentColor;
-    cursor: pointer;
+  text-decoration: none;
+  color: currentColor;
+  cursor: pointer;
 }
 
 .c-icon {
-    width: 3rem;
-    height: 3rem;
-    margin-right: 2rem;
+  width: 3rem;
+  height: 3rem;
+  margin-right: 2rem;
 }
 
 .c-desc {
-    font-size: 1.4rem;
-    font-weight: 400;
-    line-height: 2rem;
+  font-size: 1.4rem;
+  font-weight: 400;
+  line-height: 2rem;
 }
 
 form {
-    margin-top: 2rem;
+  margin-top: 2rem;
 }
 
 input {
-    width: 50%;
-    height: 5rem;
-    border: none;
-    border-bottom: 1px solid #000;
-    margin: 1rem 0rem;
-    font-size: 1.4rem;
-    padding-left: 1rem;
+  width: 50%;
+  height: 5rem;
+  border: none;
+  border-bottom: 1px solid #000;
+  margin: 1rem 0rem;
+  font-size: 1.4rem;
+  padding-left: 1rem;
+  outline: none;
 }
 
 textarea {
-    width: 100%;
-    margin: 1rem 0rem;
-    font-size: 1.4rem;
-    padding-left: 1rem;
+  width: 100%;
+  margin: 1rem 0rem;
+  font-size: 1.4rem;
+  padding-left: 1rem;
+  outline: none;
 }
 
 button {
-    border: none;
-    padding: 1.5rem;
-    background-color: #59b256;
-    color: #fff;
-    font-weight: 500;
-    cursor: pointer;
+  border: none;
+  padding: 1.5rem;
+  background-color: #59b256;
+  color: #fff;
+  font-weight: 500;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 480px) {
-    .c-wrapper {
-        flex-direction: column;
-        padding: 0rem 5rem;
-    }
+  .c-wrapper {
+    flex-direction: column;
+    padding: 0rem 5rem;
+  }
 
-    .c-title {
-        font-size: 3rem;
-    }
+  .c-title {
+    font-size: 3rem;
+  }
 
-    .c-info-item {
-        margin: 2rem 0rem;
-        width: 100%;
-    }
+  .c-info-item {
+    margin: 2rem 0rem;
+    width: 100%;
+  }
 
-    .c-right {
-        height: 100vh;
-        overflow: hidden;
-        padding-bottom: 0rem;
-    }
+  .c-right {
+    height: 100vh;
+    overflow: hidden;
+    padding-bottom: 0rem;
+  }
 
-    .c-desc {
-        display: none;
-    }
+  .c-desc {
+    display: none;
+  }
 
-    form {
-        margin-top: 0rem;
-        display: flex;
-        flex-wrap: wrap;
-        overflow: hidden;
-    }
+  form {
+    margin-top: 0rem;
+    display: flex;
+    flex-wrap: wrap;
+    overflow: hidden;
+  }
 
-    input {
-        width: 35%;
-        height: 4rem;
-        margin: 1rem;
-        margin-left: 0;
-    }
+  input {
+    width: 35%;
+    height: 4rem;
+    margin: 1rem;
+    margin-left: 0;
+  }
 
-    button {
-        margin-top: 1rem;
-    }
+  button {
+    margin-top: 1rem;
+  }
 }
